k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend 
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ai-bank-backend
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata: 
  name: backend
spec:
  selector:
    app: backend
  ports:
  - port: 8000
