k8s/qdrant.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qdrant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qdrant
  template:
    metadata:
      labels:
        app: qdrant
    spec:
      containers:
      - name: qdrant
        image: qdrant/qdrant
        volumeMounts:
        - mountPath: /qdrant/storage
          name: qdrant-data
      volumes:
      - name: qdrant-data
        persistentVolumeClaim:
           claimName: qdrant-pvc
---

apiVersion: v1
kind: Service
metadata:
  name: qdrant
spec:
  selector:
    app: qdrant
  ports:
  - port: 6333
