k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bankbot-ingress
spec:
  rules:
  - host: bankbot.local2
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80 
      - path: /api 
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8000
